2012-08-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail-cleanup): New function.
	(bbdb-complete-mail): Use it.  In particular, clean up also when
	using *Completions* buffer.

2012-08-11  Roland Winkler  <winkler@gnu.org>
	Remove electric mode that was not providing any new functionality
	to BBDB.  Also see GNU Emacs Bug#11983.

	* lisp/bbdb.el (bbdb-electric, bbdb-inside-electric-display)
	(bbdb-quit-window, bbdb-electric-display-records)
	(bbdb-electric-throw, bbdb-quit-window)
	(bbdb-display-records-internal): Remove.
	(bbdb-display-records): Remove arg electric.  Merge with
	bbdb-display-records-internal.
	(bbdb-redisplay-records): Use bbdb-display-records.

	* lisp/bbdb-com.el (bbdb-mail, bbdb-mail-address, bbdb-info):
	Remove electricity.
	(bbdb-mail-abbrev-expand-hook): Use bbdb-display-records.

	* lisp/bbdb-mua.el (bbdb-mua-display-records)
	(bbdb-mua-auto-update): Use bbdb-display-records.

2012-08-09  Roland Winkler  <winkler@gnu.org>
	Remove message cache that was broken.  There were two problems
	with it.  The cache did not distinguish between records associated
	with the senders and recipients.  So if a call of
	bbdb-mua-display-sender was followed by, say, a call of
	bbdb-mua-display-recipients the second call also returned the
	senders.  Second, the cache used assq to identify message keys to
	operate fast.  Yet most MUAs only provide strings as message keys.

	* lisp/bbdb.el (bbdb-message-all-addresses)
	(bbdb-notice-mail-hook, bbdb-notice-record-hook): Fix docstring.
	(bbdb-message-caching, bbdb-message-cache): Remove.
	(bbdb-buffer): Remove cache flushing.

	* lisp/bbdb-mua.el (bbdb-update-records): Remove arg msg-key.
	Remove caching of records.
	(bbdb-message-get-cache, bbdb-message-set-cache)
	(bbdb-message-rem-cache): Remove.
	(bbdb-mua-update-records): Remove arg msg-key from calls of
	bbdb-update-records.

2012-08-07  Roland Winkler  <winkler@gnu.org>