@@ -1,3 +1,8 @@
+2012-09-01  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-with-print-loadably): New macro.
+	(bbdb-insert-record-internal, bbdb-overwrite-record-internal)
+	(bbdb-sort-records): Use it.
+
 2012-08-11  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-com.el (bbdb-complete-mail-cleanup): New function.
 	(bbdb-complete-mail): Use it.  In particular, clean up also when
